--- a/src/Vista/Form_Recaudo.form
+++ b/src/Vista/Form_Recaudo.form
@@ -25,7 +25,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jScrollPane1" alignment="1" pref="455" max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" alignment="1" pref="753" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lbl_resultado6" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -67,7 +67,7 @@
                   <Component id="lbl_resultado8" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txt_total" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
+              <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -83,15 +83,19 @@
         <Component class="javax.swing.JTable" name="dgw_datos">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="8" rowCount="4">
-                <Column editable="true" title="Id. Desarrollador" type="java.lang.String"/>
-                <Column editable="true" title="Nombre" type="java.lang.String"/>
-                <Column editable="true" title="Tel&#xe9;fono" type="java.lang.String"/>
-                <Column editable="true" title="Tipo proyecto" type="java.lang.String"/>
-                <Column editable="true" title="C&#xf3;digo" type="java.lang.String"/>
-                <Column editable="true" title="Titulo" type="java.lang.String"/>
-                <Column editable="true" title="Cant. Procesos" type="java.lang.Integer"/>
-                <Column editable="true" title="Valor Proy" type="java.lang.Double"/>
+              <Table columnCount="12" rowCount="4">
+                <Column editable="true" title="No. Alquiler" type="java.lang.Integer"/>
+                <Column editable="true" title="Fecha_E" type="java.lang.Object"/>
+                <Column editable="true" title="Fecha_S" type="java.lang.Object"/>
+                <Column editable="true" title="D&#xed;as" type="java.lang.Integer"/>
+                <Column editable="true" title="Id. Cliente" type="java.lang.String"/>
+                <Column editable="true" title="N. Cliente" type="java.lang.String"/>
+                <Column editable="true" title="Tel. Cliente" type="java.lang.Integer"/>
+                <Column editable="true" title="Id. Maquinaria" type="java.lang.Double"/>
+                <Column editable="true" title="Tipo" type="java.lang.Object"/>
+                <Column editable="true" title="Cantidad" type="java.lang.Object"/>
+                <Column editable="true" title="Descripci&#xf3;n M." type="java.lang.Object"/>
+                <Column editable="true" title="Descripci&#xf3;n A." type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
